--- a/my-app/.env.local
+++ b/my-app/.env.local
@@ -8,3 +8,6 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
+
+
+SIGNING_SECRET=whsec_U6QuXvOrPDyZOEqJ7A5gz5IsMkjuPzb4
