adding some code in route

--- a/my-app/.env.local
+++ b/my-app/.env.local
@@ -11,3 +11,10 @@ NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
 
 
 SIGNING_SECRET=whsec_U6QuXvOrPDyZOEqJ7A5gz5IsMkjuPzb4
+
+
+
+Password=Ppk49Kde8q34bkFF
+Username=nimarahnamadev1996
+
+MONGODB_URI=mongodb+srv://nimarahnamadev1996:Ppk49Kde8q34bkFF@cluster0.4ez90jf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
