--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
